test image comparison

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             </p>
             <p>
               This approach significantly accelerates the reconstruction process, 
-              reducing training time by over 82\% while surpassing current state-of-the-art methods in visual fidelity and computational efficiency.
+              reducing training time by over 82% while surpassing current state-of-the-art methods in visual fidelity and computational efficiency.
             </p>
             <p></p>
 
@@ -329,7 +329,7 @@
         <div class="column is-full-width">
           <h2 class="title is-3">Result</h2>
           <div class="content has-text-justified">
-            <img src="./static/images/teaser.png">
+            <img src="./static/images/teaser.png" style="width: 50%; height: auto;">
             <p>Result on Tanks and Temples dataset.</p>
 
           </div>
@@ -370,7 +370,7 @@
                       <div class="bal-before-inset" style="width: 539px;">
                         <img src="./static/images/co3d_106_08_cf3dgs.png">
                         <div class="bal-beforePosition beforeLabel">
-                          3d-gs [Kerbl 2023]
+                          CF-3DGS
                         </div>
                       </div>
                     </div>
@@ -386,7 +386,7 @@
                   <div id="example2" class="bal-container-small">
 
                     <div class="bal-after">
-                      <img src="./static/images/co3d_247_23_ours.png">
+                      <img src="./static/images/horse_14_ours.png">
                       <div class="bal-afterPosition afterLabel">
                         Ours
                       </div>
@@ -394,9 +394,9 @@
 
                     <div class="bal-before" style="width: 50%;">
                       <div class="bal-before-inset" style="width: 539px;">
-                        <img src="./static/images/co3d_247_23_cf3dgs.png">
+                        <img src="./static/images/horse_14_cf3dgs.png">
                         <div class="bal-beforePosition beforeLabel">
-                          VQDVGO [Li 2022]
+                          CF-3DGS
                         </div>
                       </div>
                     </div>
@@ -422,7 +422,7 @@
 
                 <div id="example4" class="bal-container-small">
                   <div class="bal-after">
-                    <img src="./static/images/museum_10_ours.png">
+                    <img src="./static/images/co3d_247_23_ours.png">
                     <div class="bal-afterPosition afterLabel" style="z-index:1;">
                       Ours
                     </div>
@@ -430,9 +430,9 @@
 
                   <div class="bal-before" style="width:62.10191082802548%;">
                     <div class="bal-before-inset" style="width: 539px;">
-                      <img src="./static/images/museum_10_cf3dgs.png">
+                      <img src="./static/images/co3d_247_23_cf3dgs.png">
                       <div class="bal-beforePosition beforeLabel">
-                        3d-gs [Kerbl 2023]
+                        CF-3DGS
                       </div>
                     </div>
                   </div>
@@ -456,7 +456,7 @@
                     <div class="bal-before-inset" style="width: 628px;">
                       <img src="./static/images/francis_16_cf3dgs.png">
                       <div class="bal-beforePosition beforeLabel">
-                        VQDVGO [Li 2022]
+                        CF-3DGS
                       </div>
                     </div>
                   </div>
