--- a/index.html
+++ b/index.html
@@ -329,7 +329,9 @@
         <div class="column is-full-width">
           <h2 class="title is-3">Result</h2>
           <div class="content has-text-justified">
-            <img src="./static/images/teaser.png" style="width: 50%; height: auto;">
+            <div style="text-align: center;">
+              <img src="./static/images/teaser.png" style="width: 50%; height: auto;">
+            </div>
             <p>Result on Tanks and Temples dataset.</p>
 
           </div>
@@ -525,38 +527,6 @@
   </div>
 </section> -->
 
-  <!-- TODO: update the arxiv link and github -->
-  <footer class="footer">
-    <div class="container">
-      <div class="content has-text-centered">
-        <a class="icon-link" href="https://arxiv.org/pdf/2311.17245.pdf">
-          <i class="fas fa-file-pdf"></i>
-        </a>
-        <a class="icon-link" href="https://github.com/VITA-Group/LightGaussian" class="external-link" disabled>
-          <i class="fab fa-github"></i>
-        </a>
-      </div>
-      <div class="columns is-centered">
-        <div class="column is-8">
-          <div class="content">
-            <p>
-              We thank the authors of <a href="https://nerfies.github.io/">Nerfies</a> that kindly open sourced the template of this website.
-              <!-- This website is licensed under a <a rel="license"
-                href="http://creativecommons.org/licenses/by-sa/4.0/">Creative
-                Commons Attribution-ShareAlike 4.0 International License</a>. -->
-            </p>
-            <p>
-              <!-- This means you are free to borrow the <a href="https://github.com/nerfies/nerfies.github.io">source
-                code</a> of this website,
-              we just ask that you link back to this page in the footer.
-              Please remember to remove the analytics code included in the header of the website which
-              you do not want on your website. -->
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </footer>
 
 </body>
 
