--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="description"
     content="VideoLifter: Lifting Videos to 3D with Fast Hierarchical Stereo Alignment">
-  <meta name="keywords" content="LightGaussian, lightgaussian, Gaussian Splatting, Gaussian">
+  <!-- <meta name="keywords" content="LightGaussian, lightgaussian, Gaussian Splatting, Gaussian"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>VideoLifter: Lifting Videos to 3D with Fast Hierarchical Stereo Alignment</title>
 
@@ -192,56 +192,56 @@
         <div id="results-carousel" class=" carousel results-carousel">
           <div class="item item-room">
             <video poster="" id="room" autoplay controls muted loop playsinline height="100%">
-              <source src="./static/videos/room_video_comp3.mp4"
+              <source src="./static/videos/Ignatius_compare.mp4"
                       type="video/mp4">
             </video>
           </div>
   
           <div class="item item-garden">
             <video poster="" id="garden" autoplay controls muted loop playsinline height="100%">
-              <source src="./static/videos/garden_video_comp3.mp4" type="video/mp4">
+              <source src="./static/videos/Family_compare.mp4" type="video/mp4">
             </video>
           </div>
           <div class="item item-bicycle">
             <video poster="" id="bicycle" autoplay controls muted loop playsinline height="100%">
-              <source src="./static/videos/bicycle_video_comp3.mp4" type="video/mp4">
+              <source src="./static/videos/Francis_compare.mp4" type="video/mp4">
             </video>
           </div>
           <div class="item item-bonsai">
             <video poster="" id="bonsai" autoplay controls muted loop playsinline height="100%">
-              <source src="./static/videos/bonsai_video_comp3.mp4" type="video/mp4">
+              <source src="./static/videos/Horse_compare.mp4" type="video/mp4">
             </video>
           </div>
           <div class="item item-counter">
             <video poster="" id="counter" autoplay controls muted loop playsinline height="100%">
-              <source src="./static/videos/counter_video_comp3.mp4" type="video/mp4">
+              <source src="./static/videos/bench_415_57112_110099_compare.mp4" type="video/mp4">
             </video>
           </div>
           <div class="item item-kitchen">
             <video poster="" id="kitchen" autoplay controls muted loop playsinline height="100%">
-              <source src="./static/videos/kitchen_video_comp3.mp4" type="video/mp4">
+              <source src="./static/videos/apple_110_13051_23361_compare.mp4" type="video/mp4">
             </video>
           </div>
         <div class="item item-train">
           <video poster="" id="train" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/train_video_comp3.mp4"
+            <source src="./static/videos/plant_247_26441_50907_compare.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-struck">
           <video poster="" id="toby" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/truck_video_comp3.mp4"
+            <source src="./static/videos/skateboard_245_26182_52130_compare.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-stump">
           <video poster="" id="stump" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/stump_video_comp3.mp4"
+            <source src="./static/videos/skateboard_407_54965_106262_compare.mp4"
                     type="video/mp4">
           </video>
         </div>
         </div>
-        <p>The caption displays both the file size and the Structural Similarity Index (SSIM)</p>
+        <p>We show novel views from a Bezier curve which is fitted to estimated camera poses.</p>
       </div>
     </div>
   </section>
@@ -475,6 +475,7 @@
         </div>
       </div>
     </div>
+    <p>We show the synthesized images from testing views.</p>
   </section>
 
   <script>
@@ -527,6 +528,7 @@
   </div>
 </section> -->
 
+  <!-- TODO: update the arxiv link and github -->
 
 </body>
 
