--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <title>VideoLifter: Lifting Videos to 3D with Fast Hierarchical Stereo Alignment</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
-  <script> -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script> -->
+  <script>
     window.dataLayer = window.dataLayer || [];
 
     function gtag() {
