--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                <a href="https://Mia-Cong.github.io/">Wenyan Cong</a><sup>1</sup><sup>*</sup>,</span>
+                <a href="https://Mia-Cong.github.io/">Wenyan Cong</a><sup>1</sup>,</span>
               <span class="author-block">
-                <a href="https://kevin-2017.github.io/">Kevin Wang</a><sup>1</sup><sup>*</sup>,</span>
+                <a href="https://kevin-2017.github.io/">Kevin Wang</a><sup>1</sup>,</span>
               <span class="author-block">
                 <a href="https://www.cis.upenn.edu/~leijh/">Jiahui Lei</a><sup>2</sup>,</span>
               <span class="author-block">
@@ -83,8 +83,10 @@
 
             <div class="is-size-5 publication-authors">
               <span class="author-block"><sup>1</sup>The University of Texas at Austin</span>
-              <span class="author-block"><sup>2</sup>Xiamen University</span> <br>
-              <span class="author-block"><sup>*</sup>denotes equal contribution</span>
+              <span class="author-block"><sup>2</sup>University of Pennsylvania</span> <br>
+              <span class="author-block"><sup>3</sup>Stanford University</span> <br>
+              <span class="author-block"><sup>4</sup>Johns Hopkins University</span> <br>
+              <span class="author-block"><sup>5</sup>Meta</span> <br>
             </div>
 
           </div>
