--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
             <div class="is-size-5 publication-authors">
               <span class="author-block"><sup>1</sup>The University of Texas at Austin</span>
               <span class="author-block"><sup>2</sup>University of Pennsylvania</span> <br>
-              <span class="author-block"><sup>3</sup>Stanford University</span> <br>
-              <span class="author-block"><sup>4</sup>Johns Hopkins University</span> <br>
+              <span class="author-block"><sup>3</sup>Stanford University</span> 
+              <span class="author-block"><sup>4</sup>Johns Hopkins University</span>
               <span class="author-block"><sup>5</sup>Meta</span> <br>
             </div>
 
