--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                <a href="https://Mia-Cong.github.io/">Wenyan Cong</a><sup>1</sup>,</span>
+                <a href="https://wenyancong.com/">Wenyan Cong</a><sup>1</sup>,</span>
               <span class="author-block">
                 <a href="https://kevin-2017.github.io/">Kevin Wang</a><sup>1</sup>,</span>
               <span class="author-block">
