--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <span class="author-block">
                 <a href="https://scholar.google.com/citations?user=d1-hNQoAAAAJ&hl=en">Weiyao Wang</a><sup>5</sup>,</span>
               <span class="author-block">
-                <a href="https://zhiwenfan.github.io/">Zhiwen Fan</a><sup>1</sup><sup>*</sup>,</span>
+                <a href="https://zhiwenfan.github.io/">Zhiwen Fan</a><sup>1</sup>,</span>
                 
 
             </div>
@@ -88,6 +88,25 @@
               <span class="author-block"><sup>4</sup>Johns Hopkins University</span>
               <span class="author-block"><sup>5</sup>Meta</span> <br>
             </div>
+
+            <span class="link-block">
+              <a href="http://arxiv.org/abs/2501.01949"
+                 class="external-link button is-normal is-rounded is-dark">
+                <span class="icon">
+                    <i class="ai ai-arxiv"></i>
+                </span>
+                <span>arXiv</span>
+              </a>
+            </span>
+            <span class="link-block">
+              <a href=""
+                class="external-link button is-normal is-rounded is-dark">
+                <span class="icon">
+                  <i class="fab fa-github"></i>
+                </span>
+                <span>Code (Coming Soon)</span>
+              </a>
+            </span>
 
           </div>
         </div>
