--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <span class="author-block">
                 <a href="https://scholar.google.com/citations?user=d1-hNQoAAAAJ&hl=en">Weiyao Wang</a><sup>5</sup>,</span>
               <span class="author-block">
-                <a href="https://zhiwenfan.github.io/">Zhiwen Fan</a><sup>1</sup>,</span>
+                <a href="https://zhiwenfan.github.io/">Zhiwen Fan</a><sup>1</sup></span>
                 
 
             </div>
