--- a/index.html
+++ b/index.html
@@ -239,12 +239,12 @@
                   </video>
                 </div>
                 <div class="column is-half">
-                  <video poster="" id="apple" autoplay controls muted loop playsinline height="198%">
+                  <video poster="" id="apple" autoplay controls muted loop playsinline style="height: 150%;">
                     <source src="./static/videos/apple_110_13051_23361_compare.mp4" type="video/mp4">
                   </video>
                 </div>
                 <div class="column is-half">
-                  <video poster="" id="hydrant" autoplay controls muted loop playsinline height="100%">
+                  <video poster="" id="hydrant" autoplay controls muted loop playsinline height="75%">
                     <source src="./static/videos/hydrant_106_12648_23157_compare.mp4" type="video/mp4">
                   </video>
                 </div>
