--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                   </video>
                 </div>
                 <div class="column is-half">
-                  <video poster="" id="apple" autoplay controls muted loop playsinline style="height: 150%;">
+                  <video poster="" id="apple" autoplay controls muted loop playsinline style="height: 150%; width: auto;">
                     <source src="./static/videos/apple_110_13051_23361_compare.mp4" type="video/mp4">
                   </video>
                 </div>
