--- a/index.html
+++ b/index.html
@@ -229,12 +229,12 @@
                   </video>
                 </div>
                 <div class="column is-half">
-                  <video poster="" id="plant" autoplay controls muted loop playsinline height="75%">
+                  <video poster="" id="plant" autoplay controls muted loop playsinline style="height: 75%; width: auto;">
                     <source src="./static/videos/plant_247_26441_50907_compare.mp4" type="video/mp4">
                   </video>
                 </div>
                 <div class="column is-half">
-                  <video poster="" id="skateboard2" autoplay controls muted loop playsinline height="75%">
+                  <video poster="" id="skateboard2" autoplay controls muted loop playsinline style="height: 75%; width: auto;">
                     <source src="./static/videos/skateboard_407_54965_106262_compare.mp4" type="video/mp4">
                   </video>
                 </div>
@@ -244,7 +244,7 @@
                   </video>
                 </div>
                 <div class="column is-half">
-                  <video poster="" id="hydrant" autoplay controls muted loop playsinline height="75%">
+                  <video poster="" id="hydrant" autoplay controls muted loop playsinline style="height: 75%; width: auto;">
                     <source src="./static/videos/hydrant_106_12648_23157_compare.mp4" type="video/mp4">
                   </video>
                 </div>
