--- a/index.html
+++ b/index.html
@@ -229,22 +229,22 @@
                   </video>
                 </div>
                 <div class="column is-half">
-                  <video poster="" id="plant" autoplay controls muted loop playsinline style="height: 75%; width: auto;">
+                  <video poster="" id="plant" autoplay controls muted loop playsinline height="100%">
                     <source src="./static/videos/plant_247_26441_50907_compare.mp4" type="video/mp4">
                   </video>
                 </div>
                 <div class="column is-half">
-                  <video poster="" id="skateboard2" autoplay controls muted loop playsinline style="height: 75%; width: auto;">
+                  <video poster="" id="skateboard2" autoplay controls muted loop playsinline height="100%">
                     <source src="./static/videos/skateboard_407_54965_106262_compare.mp4" type="video/mp4">
                   </video>
                 </div>
                 <div class="column is-half">
-                  <video poster="" id="apple" autoplay controls muted loop playsinline style="height: auto; width: 150%;">
+                  <video poster="" id="apple" autoplay controls muted loop playsinline style="height: 200%; width: 150%;">
                     <source src="./static/videos/apple_110_13051_23361_compare.mp4" type="video/mp4">
                   </video>
                 </div>
                 <div class="column is-half">
-                  <video poster="" id="hydrant" autoplay controls muted loop playsinline style="height: 75%; width: auto;">
+                  <video poster="" id="hydrant" autoplay controls muted loop playsinline height="100%">
                     <source src="./static/videos/hydrant_106_12648_23157_compare.mp4" type="video/mp4">
                   </video>
                 </div>
