--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
               </a>
             </span>
             <span class="link-block">
-              <a href=""
+              <a href="https://github.com/VITA-Group/VideoLifter"
                 class="external-link button is-normal is-rounded is-dark">
                 <span class="icon">
                   <i class="fab fa-github"></i>
                 </span>
-                <span>Code (Coming Soon)</span>
+                <span>Code</span>
               </a>
             </span>
 
