--- a/index.html
+++ b/index.html
@@ -51,10 +51,15 @@
           <div class="column has-text-centered">
             <h1 class="title is-1 publication-title">VideoLifter: Lifting Videos to 3D with Fast Hierarchical Stereo Alignment</h1>
             
+            <p class="is-size-5 has-text-weight-semibold has-text-danger mt-3">
+              🏆 Abstract paper won Best Paper Award @ <a href="https://ai4cc.net/">CVPR 2025 AI4CC Workshop</a>
+            </p>
 
             <div class="is-size-5 publication-authors">
               <span class="author-block">
                 <a href="https://wenyancong.com/">Wenyan Cong</a><sup>1</sup>,</span>
+              <span class="author-block">
+                <a href="https://zhuhanqing.github.io/">Hanqing Zhu</a><sup>1</sup>,</span>
               <span class="author-block">
                 <a href="https://kevin-2017.github.io/">Kevin Wang</a><sup>1</sup>,</span>
               <span class="author-block">
@@ -72,11 +77,11 @@
               <span class="author-block">
                 <a href="https://profiles.stanford.edu/leonidas-guibas">Leonidas Guibas</a><sup>3</sup>,</span>
               <span class="author-block">
-                <a href="https://express.adobe.com/page/CAdrFMJ9QeI2y/">Zhangyang Wang</a><sup>1</sup>
+                <a href="https://express.adobe.com/page/CAdrFMJ9QeI2y/">Zhangyang Wang</a><sup>1*</sup>,</span>
               <span class="author-block">
-                <a href="https://scholar.google.com/citations?user=d1-hNQoAAAAJ&hl=en">Weiyao Wang</a><sup>5</sup>,</span>
+                <a href="https://scholar.google.com/citations?user=d1-hNQoAAAAJ&hl=en">Weiyao Wang</a><sup>5*</sup>,</span>
               <span class="author-block">
-                <a href="https://zhiwenfan.github.io/">Zhiwen Fan</a><sup>1</sup></span>
+                <a href="https://zhiwenfan.github.io/">Zhiwen Fan</a><sup>1*</sup></span>
                 
 
             </div>
