--- a/index.html
+++ b/index.html
@@ -69,18 +69,18 @@
               <span class="author-block">
                 <a href="https://caiyuanhao1998.github.io/">Yuanhao Cai</a><sup>4</sup>,</span>
               <span class="author-block">
-                <a href="https://wdilin.github.io/">Dilin Wang</a><sup>5</sup>,</span>
+                <!-- <a href="https://wdilin.github.io/">Dilin Wang</a><sup>5</sup>,</span>
               <span class="author-block">
                 <a href="https://www.linkedin.com/in/rakesh-r-3848538/">Rakesh Ranjan</a><sup>5</sup>,</span>
               <span class="author-block">
                 <a href="https://scholar.google.com/citations?user=A-wA73gAAAAJ&hl=en">Matt Feiszli</a><sup>5</sup>,</span>
-              <span class="author-block">
+              <span class="author-block"> -->
                 <a href="https://profiles.stanford.edu/leonidas-guibas">Leonidas Guibas</a><sup>3</sup>,</span>
               <span class="author-block">
                 <a href="https://express.adobe.com/page/CAdrFMJ9QeI2y/">Zhangyang Wang</a><sup>1*</sup>,</span>
               <span class="author-block">
-                <a href="https://scholar.google.com/citations?user=d1-hNQoAAAAJ&hl=en">Weiyao Wang</a><sup>5*</sup>,</span>
-              <span class="author-block">
+                <!-- <a href="https://scholar.google.com/citations?user=d1-hNQoAAAAJ&hl=en">Weiyao Wang</a><sup>5*</sup>,</span>
+              <span class="author-block"> -->
                 <a href="https://zhiwenfan.github.io/">Zhiwen Fan</a><sup>1*</sup></span>
                 
 
@@ -91,7 +91,7 @@
               <span class="author-block"><sup>2</sup>University of Pennsylvania</span> <br>
               <span class="author-block"><sup>3</sup>Stanford University</span> 
               <span class="author-block"><sup>4</sup>Johns Hopkins University</span>
-              <span class="author-block"><sup>5</sup>Meta</span> <br>
+              <!-- <span class="author-block"><sup>5</sup>Meta</span> <br> -->
             </div>
 
             <span class="link-block">
